# gitlab-on-prem-pr-decoration-service

./: Dockerfile  README  README.md  pr-service.py  pyproject.toml  sample-pr-webhook-payload.json
