[tool.poetry]
name = "flask-pr-service"
version = "0.1.0"
description = "A Flask service to comment on GitLab merge requests"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"